Fixed spacing again.

--- a/app/assets/stylesheets/todos.scss
+++ b/app/assets/stylesheets/todos.scss
@@ -121,7 +121,7 @@ input {
 
 .todoitem{
   margin-top: 0px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .todoitem a{
